# graph-mutator

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md
.github/workflows/: cmake.yml
include/graph-mutator/: definitions.h  string_ops.h  to_string.h  vector_container.h
include/graph-mutator/structure/: chain.h  chain_collection.h  chain_indexes.h  component.h  edge.h  ends.h  graph.h  integral_tester.h  integral_tests.h  io.h  neigs.h  slot.h  world.h
include/graph-mutator/structure/paths/over_edges/: distance.h  generic.h
include/graph-mutator/structure/paths/over_endslots/: distance.h  generic.h
include/graph-mutator/structure/vertices/: all.h  collections.h  degrees.h  vertex.h
include/graph-mutator/transforms/component_creation/: functor.h
include/graph-mutator/transforms/component_deletion/: functor.h
include/graph-mutator/transforms/edge_creation/: functor_new_chain.h  functor_old_chain.h  in_existing_chain.h  in_new_chain.h
include/graph-mutator/transforms/edge_deletion/: common.h  deleting_host_chain.h  functor_1.h  functor_2.h  preserving_host_chain.h
include/graph-mutator/transforms/pulling/: common.h  functor_1.h  functor_2.h  functor_3.h  functor_base.h  log.h  on_1.h  on_2.h  on_3.h  paths.h
include/graph-mutator/transforms/vertex_merger/: common.h  core.h  from_00.h  from_10.h  from_11.h  from_12.h  from_13.h  from_20.h  from_22.h  functor_00.h  functor_10.h  functor_11.h  functor_12.h  functor_13.h  functor_20.h  functor_22.h  log.h
include/graph-mutator/transforms/vertex_split/: common.h  functor_11.h  functor_13.h  functor_1B.h  functor_BB.h  log.h  to_11.h  to_13.h  to_1B.h  to_BB.h
tests/: CMakeLists.txt  chain.cpp  common.h  component_creation_deletion.cpp  edge.cpp  edge_creation.cpp  edge_deletion.cpp  graph.cpp  paths.cpp  pulling.h  pulling_1.cpp  pulling_2.cpp  pulling_3.cpp  vertex_merger.cpp  vertex_merger_core.cpp  vertex_split.cpp  vertices.cpp
